SilverDeck: add draw_ascii_workspace, make origin offset by padding optional

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -961,6 +961,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The default data objects for Pipettin are available online. We'll use those for now."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -969,28 +976,25 @@
    "outputs": [],
    "source": [
     "# Example using exported data.\n",
-    "import json\n",
-    "import urllib.request\n",
-    "\n",
     "from pylabrobot.resources.pipettin.utils import load_objects\n",
     "\n",
-    "# path = \"/tmp/workspaces.json\"\n",
-    "location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/workspaces.json'\n",
-    "workspace = load_objects(location)[2]\n",
-    "print(workspace[\"name\"])\n",
+    "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
     "\n",
-    "# location = \"/tmp/platforms.json\"\n",
-    "location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/platforms.json'\n",
-    "platforms = load_objects(location)\n",
+    "db = load_objects(db_location)[\"pipettin\"]\n",
     "\n",
-    "# location = \"/tmp/platforms.json\"\n",
-    "location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/containers.json'\n",
-    "containers = load_objects(location)"
+    "print(list(db))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With that information, we can instantiate the SilverDeck object:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
@@ -998,7 +1002,18 @@
    "source": [
     "from pylabrobot.resources import SilverDeck\n",
     "\n",
-    "deck = SilverDeck(workspace, platforms, containers)"
+    "# Choose one workspace.\n",
+    "workspace = db[\"workspaces\"][2]\n",
+    "\n",
+    "# Get all platforms and containers.\n",
+    "platforms = db[\"platforms\"]\n",
+    "containers = db[\"containers\"]\n",
+    "\n",
+    "# Instantiate the deck object.\n",
+    "deck = SilverDeck(workspace, platforms, containers)\n",
+    "\n",
+    "# Inspect the workspace's name.\n",
+    "print(deck.summary())"
    ]
   },
   {
@@ -1006,6 +1021,15 @@
    "metadata": {},
    "source": [
     "### Anchor behaviour"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A workspace may have anchors, with platforms snapped on to them (much like slots on a deck).\n",
+    "\n",
+    "That's why platforms in the workspace may not show up as immediate children of the Silverdeck:"
    ]
   },
   {
@@ -1021,6 +1045,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead, the anchors have them as children:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1032,14 +1063,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The locations of resources are converted, because PLR and Pipettin don't use the same coordinate system.\n",
+    "\n",
+    "PLR has a bottom-left origin (as in math plots), and Pipettin uses a top-left origin (as in matrices, images, well-plates, etc.)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "anchor = deck.children[0].children[0]\n",
+    "anchor = deck.children[0]\n",
     "\n",
-    "anchor.get_absolute_location()"
+    "print(anchor.name, \"coordinates:\", anchor.location)\n",
+    "print(anchor.name, \"absolute coordinates:\", anchor.get_absolute_location())"
    ]
   },
   {
@@ -1050,7 +1091,7 @@
    "source": [
     "tip_rack = anchor.children[0]\n",
     "\n",
-    "tip_rack.get_absolute_location()"
+    "print(tip_rack.name, tip_rack.get_absolute_location())"
    ]
   },
   {
