SilverDeck: add rack_to_plr_dxdydz method, fix conversion to PLR coordinates

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "metadata": {}
    },
@@ -980,9 +980,28 @@
     "\n",
     "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
     "\n",
-    "db = load_objects(db_location)[\"pipettin\"]\n",
+    "db = load_objects(db_location)[\"pipettin\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the required objects:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose one workspace.\n",
+    "workspace = db[\"workspaces\"][2]\n",
     "\n",
-    "print(list(db))"
+    "# Get all platforms and containers.\n",
+    "platforms = db[\"platforms\"]\n",
+    "containers = db[\"containers\"]"
    ]
   },
   {
@@ -1002,17 +1021,10 @@
    "source": [
     "from pylabrobot.resources import SilverDeck\n",
     "\n",
-    "# Choose one workspace.\n",
-    "workspace = db[\"workspaces\"][2]\n",
-    "\n",
-    "# Get all platforms and containers.\n",
-    "platforms = db[\"platforms\"]\n",
-    "containers = db[\"containers\"]\n",
-    "\n",
     "# Instantiate the deck object.\n",
     "deck = SilverDeck(workspace, platforms, containers)\n",
     "\n",
-    "# Inspect the workspace's name.\n",
+    "# Inspect the workspace's contents.\n",
     "print(deck.summary())"
    ]
   },
