notebooks: start PLR->PB translation

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1539,6 +1539,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Deck translation to PLR\n",
+    "\n",
+    "Development notes for translating PLR deck objects to Pipettin workspace objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example using exported data.\n",
+    "from piper.datatools.datautils import load_objects\n",
+    "from pylabrobot.resources import SilverDeck\n",
+    "\n",
+    "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
+    "\n",
+    "db = load_objects(db_location)[\"pipettin\"]\n",
+    "\n",
+    "# Choose one workspace.\n",
+    "workspace = db[\"workspaces\"][2]\n",
+    "\n",
+    "# Get all platforms and containers.\n",
+    "platforms = db[\"platforms\"]\n",
+    "containers = db[\"containers\"]\n",
+    "\n",
+    "# Instantiate the deck object.\n",
+    "deck = SilverDeck(workspace, platforms, containers)\n",
+    "\n",
+    "# Inspect the workspace's contents.\n",
+    "print(deck.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Approach 1: Serialize the Deck\n",
+    "\n",
+    "Should be good enough to get ChatGPT to make boilerplate code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deck.serialize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# To-do list\n",
     "\n",
     "In summary, I should:\n",
