SilverDeck: minor changes to serialization methods for deck-to-workspace translation
Basic workspace generation works, and is correclty imported to the UI.
Content generation and import is limited to tips for now.

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1553,6 +1553,7 @@
     "# Example using exported data.\n",
     "from piper.datatools.datautils import load_objects\n",
     "from pylabrobot.resources import SilverDeck\n",
+    "from pylabrobot.resources import set_tip_tracking, set_volume_tracking\n",
     "\n",
     "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
     "\n",
@@ -1560,16 +1561,53 @@
     "\n",
     "# Choose one workspace.\n",
     "workspace = db[\"workspaces\"][2]\n",
+    "del workspace[\"thumbnail\"]\n",
     "\n",
     "# Get all platforms and containers.\n",
-    "platforms = db[\"platforms\"]\n",
+    "workspace_items = workspace[\"items\"]\n",
+    "platforms_in_workspace = [item[\"platform\"] for item in workspace_items]\n",
+    "platforms = [p for p in db[\"platforms\"] if p[\"name\"] in platforms_in_workspace]\n",
+    "\n",
+    "# Get all containers.\n",
     "containers = db[\"containers\"]\n",
     "\n",
+    "# Get all tools.\n",
+    "tools = db[\"tools\"]\n",
+    "\n",
+    "# Enable tracking.\n",
+    "set_volume_tracking(enabled=True)\n",
+    "set_tip_tracking(enabled=True)\n",
+    "\n",
+    "tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "# Instantiate the deck object.\n",
-    "deck = SilverDeck(workspace, platforms, containers)\n",
+    "deck = SilverDeck(workspace, platforms, containers, tools)\n",
     "\n",
     "# Inspect the workspace's contents.\n",
-    "print(deck.summary())"
+    "# print(deck.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deck.get_resource(\"Blue tip rack\").print_grid()\n",
+    "\n",
+    "ts = deck.get_resource(\"Blue tip rack\")[\"A1\"][0]\n",
+    "ts.has_tip()\n",
+    "\n",
+    "# from pprint import pprint\n",
+    "# pprint(ts.serialize())"
    ]
   },
   {
@@ -1583,11 +1621,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deck_data = deck.serialize()\n",
+    "\n",
+    "import json\n",
+    "data = json.dumps(deck_data, indent = 4)\n",
+    "with open(\"deck.json\", 'w', encoding='utf-8') as f:\n",
+    "    f.write(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from newt.translators.plr import convert_plr_deck_to_piper_workspace\n",
+    "\n",
+    "new_ws = convert_plr_deck_to_piper_workspace(deck_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "deck.serialize()"
+    "from newt.translators.plr import id_to_single_index\n",
+    "\n",
+    "id_to_single_index(\"B2\",  2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from newt.translators.plr import convert_items\n",
+    "\n",
+    "resources = deck_data[\"children\"]\n",
+    "deck_height = deck_data[\"size_y\"]\n",
+    "\n",
+    "new_items, new_platforms = convert_items(resources, deck_height)\n",
+    "\n",
+    "new_ws[\"items\"] = new_items\n",
+    "\n",
+    "new_workspaces = [new_ws]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from pprint import pprint\n",
+    "# pprint(result)\n",
+    "\n",
+    "import json\n",
+    "data = json.dumps(new_workspaces, indent = 4)\n",
+    "# print(data)\n",
+    "\n",
+    "with open(\"workspace.json\", 'w', encoding='utf-8') as f:\n",
+    "    f.write(data)\n"
    ]
   },
   {
