notebooks: inspecting Eppendorf_96_wellplate_250ul_Vb Note that Cos_96_DW_1mL no longer works

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1576,9 +1576,7 @@
     "\n",
     "# Enable tracking.\n",
     "set_volume_tracking(enabled=True)\n",
-    "set_tip_tracking(enabled=True)\n",
-    "\n",
-    "tools"
+    "set_tip_tracking(enabled=True)"
    ]
   },
   {
@@ -1587,7 +1585,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Instantiate the deck object.\n",
     "deck = SilverDeck(workspace, platforms, containers, tools)\n",
     "\n",
@@ -1625,23 +1622,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from newt.translators.plr import deck_to_workspaces\n",
+    "\n",
+    "# Serialize deck.\n",
     "deck_data = deck.serialize()\n",
+    "# Convert to workspace.\n",
+    "new_workspaces = deck_to_workspaces(deck_data)\n",
     "\n",
     "import json\n",
     "data = json.dumps(deck_data, indent = 4)\n",
     "with open(\"deck.json\", 'w', encoding='utf-8') as f:\n",
-    "    f.write(data)"
+    "    f.write(data)\n",
+    "data = json.dumps(new_workspaces, indent = 4)\n",
+    "with open(\"workspace.json\", 'w', encoding='utf-8') as f:\n",
+    "    f.write(data)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from newt.translators.plr import convert_plr_deck_to_piper_workspace\n",
-    "\n",
-    "new_ws = convert_plr_deck_to_piper_workspace(deck_data)"
+    "## What about well-plates"
    ]
   },
   {
@@ -1650,44 +1651,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from newt.translators.plr import id_to_single_index\n",
+    "# Import the resource class\n",
+    "from pylabrobot.resources import Eppendorf_96_wellplate_250ul_Vb\n",
     "\n",
-    "id_to_single_index(\"B2\",  2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from newt.translators.plr import convert_items\n",
+    "# Create an instance\n",
+    "well_plate = Eppendorf_96_wellplate_250ul_Vb(name='plate_01')\n",
+    "well_plate.set_well_liquids(liquids=(None, 123))\n",
     "\n",
-    "resources = deck_data[\"children\"]\n",
-    "deck_height = deck_data[\"size_y\"]\n",
-    "\n",
-    "new_items, new_platforms = convert_items(resources, deck_height)\n",
-    "\n",
-    "new_ws[\"items\"] = new_items\n",
-    "\n",
-    "new_workspaces = [new_ws]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from pprint import pprint\n",
-    "# pprint(result)\n",
-    "\n",
-    "import json\n",
-    "data = json.dumps(new_workspaces, indent = 4)\n",
-    "# print(data)\n",
-    "\n",
-    "with open(\"workspace.json\", 'w', encoding='utf-8') as f:\n",
-    "    f.write(data)\n"
+    "from pprint import pprint\n",
+    "pprint(well_plate.serialize())"
    ]
   },
   {
@@ -1716,6 +1688,11 @@
     "- Have the backend translate (during setup) non-PW decks to PW format, and save them to the database.\n",
     "  - This is essential when the deck is not PW-ish."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
