--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1001,7 +1001,8 @@
     "\n",
     "# Get all platforms and containers.\n",
     "platforms = db[\"platforms\"]\n",
-    "containers = db[\"containers\"]"
+    "containers = db[\"containers\"]\n",
+    "tools = db[\"tools\"]"
    ]
   },
   {
@@ -1022,7 +1023,7 @@
     "from pylabrobot.resources import SilverDeck\n",
     "\n",
     "# Instantiate the deck object.\n",
-    "deck = SilverDeck(workspace, platforms, containers)\n",
+    "deck = SilverDeck(workspace, platforms, containers, tools)\n",
     "\n",
     "# Inspect the workspace's contents.\n",
     "print(deck.summary())"
