translator: finally figured out dx and dy, added test for conversion and accuracy using updated Thermo_TS_96_wellplate_1200ul_Rb

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1643,24 +1643,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What about well-plates"
+    "## What about PLR well-plates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the resource class\n",
-    "from pylabrobot.resources import Eppendorf_96_wellplate_250ul_Vb\n",
+    "from pylabrobot.resources import pipettin_test_plate\n",
     "\n",
     "# Create an instance\n",
-    "well_plate = Eppendorf_96_wellplate_250ul_Vb(name='plate_01')\n",
-    "well_plate.set_well_liquids(liquids=(None, 123))\n",
+    "well_plate = pipettin_test_plate(name='plate_01')\n",
+    "well_plate.set_well_liquids(liquids=(None, 123))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.resources import Deck, Coordinate\n",
     "\n",
-    "from pprint import pprint\n",
-    "pprint(well_plate.serialize())"
+    "deck = Deck(size_x=300, size_y=200)\n",
+    "\n",
+    "deck.assign_child_resource(well_plate, location=Coordinate(100,100,0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from newt.translators.plr import deck_to_workspaces\n",
+    "\n",
+    "# Serialize deck.\n",
+    "deck_data = deck.serialize()\n",
+    "# Convert to workspace.\n",
+    "new_workspaces = deck_to_workspaces(deck_data)\n",
+    "\n",
+    "import json\n",
+    "data = json.dumps(deck_data, indent = 4)\n",
+    "with open(\"deck.json\", 'w', encoding='utf-8') as f:\n",
+    "    f.write(data)\n",
+    "data = json.dumps(new_workspaces, indent = 4)\n",
+    "with open(\"workspace.json\", 'w', encoding='utf-8') as f:\n",
+    "    f.write(data)\n"
    ]
   },
   {
