hunting bugs in rack_to_plr_dxdydz

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1547,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,7 +1590,8 @@
     "deck = SilverDeck(workspace, platforms, containers, tools)\n",
     "\n",
     "# Inspect the workspace's contents.\n",
-    "# print(deck.summary())"
+    "# print(deck.summary())\n",
+    "deck.name"
    ]
   },
   {
@@ -1599,13 +1600,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deck.get_resource(\"Blue tip rack\").print_grid()\n",
-    "\n",
-    "ts = deck.get_resource(\"Blue tip rack\")[\"A1\"][0]\n",
-    "ts.has_tip()\n",
-    "\n",
-    "# from pprint import pprint\n",
-    "# pprint(ts.serialize())"
+    "tip_rack = deck.get_resource(\"Blue tip rack\")\n",
+    "tip_rack.print_grid()\n",
+    "# tip_rack.fill()\n",
+    "# tip_rack.print_grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "well_plate = deck.get_resource(\"Standard 96-well plate\")\n",
+    "well_plate.print_grid()\n",
+    "# well_plate[\"B1\"][0].location, well_plate[\"A1\"][0].center()\n",
+    "# well_plate[\"B1\"][0]"
    ]
   },
   {
@@ -1619,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1648,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1662,20 +1672,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pylabrobot.resources import Deck, Coordinate\n",
     "\n",
-    "deck = Deck(size_x=300, size_y=200)\n",
+    "# deck = Deck(size_x=300, size_y=200)\n",
     "\n",
     "deck.assign_child_resource(well_plate, location=Coordinate(100,100,0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
