notebooks: inspect conversion with deepdiff

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1745,10 +1745,75 @@
     "data_converted = convert_custom(data, deck.get_size_y())\n",
     "\n",
     "import json\n",
-    "with open('pocket.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(data, f, indent=4)\n",
+    "from collections import OrderedDict\n",
+    "# with open('pocket_platform.json', 'w', encoding='utf-8') as f:\n",
+    "#     json.dump(next(p for p in deck.platforms if p[\"name\"] == pocket.name), f, indent=4, sort_keys=True)\n",
+    "with open('pocket_deck.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(data, f, indent=4, sort_keys=True)\n",
     "with open('pocket_converted.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(data_converted, f, indent=4)"
+    "    json.dump(data_converted, f, indent=4, sort_keys=True)\n",
+    "with open('pocket_converted_platform.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(data_converted[\"piper_platform\"], f, indent=4, sort_keys=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparing outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def format_number(x, significant_digits=4, number_format_notation=None):\n",
+    "  fstring = \"{0:.\" + str(significant_digits+1) + \"g}\"\n",
+    "  return fstring.format(x)\n",
+    "\n",
+    "format_number(3.123123), format_number(0), format_number(0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install deepdiff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deepdiff import DeepDiff\n",
+    "\n",
+    "DeepDiff(\n",
+    "  t1 = next(p for p in deck.platforms if p[\"name\"] == pocket.name),\n",
+    "  t2 = data_converted[\"piper_platform\"],\n",
+    "  # math_epsilon=0.001\n",
+    "  number_to_string_func = format_number, significant_digits=4,\n",
+    "  ignore_numeric_type_changes=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\n",
+    "  \"color\": \"#89e04c\",\n",
+    "  \"description\": \"Pocket-size thermocycler (https://gaudi.ch/PocketPCR/).\",\n",
+    "  \"rotation\": 0,\n",
+    "}"
    ]
   },
   {
