--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1724,111 +1724,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example using exported data.\n",
     "from pylabrobot.resources import SilverDeck\n",
+    "from deepdiff import DeepDiff\n",
     "\n",
     "# Choose the database and a workspace.\n",
     "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
     "workspace_name = \"Basic Workspace\"\n",
+    "item_name = \"Pocket PCR\"\n",
     "\n",
     "# Instantiate the deck object.\n",
     "deck = SilverDeck(db=db_location, workspace_name=workspace_name)\n",
     "\n",
-    "pocket = deck.get_resource(\"Pocket PCR\")\n",
-    "data = pocket.serialize()\n",
+    "pocket = deck.get_resource(item_name)\n",
+    "pocket_serialized = pocket.serialize()\n",
     "\n",
-    "from newt.translators.plr import convert_custom\n",
-    "data_converted = convert_custom(data, deck.get_size_y())\n",
-    "\n",
-    "import json\n",
-    "from collections import OrderedDict\n",
-    "# with open('pocket_platform.json', 'w', encoding='utf-8') as f:\n",
-    "#     json.dump(next(p for p in deck.platforms if p[\"name\"] == pocket.name), f, indent=4, sort_keys=True)\n",
-    "with open('pocket_deck.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(data, f, indent=4, sort_keys=True)\n",
-    "with open('pocket_converted.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(data_converted, f, indent=4, sort_keys=True)\n",
-    "with open('pocket_converted_platform.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(data_converted[\"piper_platform\"], f, indent=4, sort_keys=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Comparing outputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data_converted = convert_custom(pocket_serialized, deck.get_size_y())\n",
+    "converted_platform = data_converted[\"piper_platform\"]\n",
     "\n",
     "def format_number(x, significant_digits=4, number_format_notation=None):\n",
-    "  fstring = \"{0:.\" + str(significant_digits+1) + \"g}\"\n",
-    "  return fstring.format(x)\n",
+    "    \"\"\"function for DeepDiff's number_to_string_func argument.\n",
+    "    Example:\n",
+    "    format_number(3.123123), format_number(0), format_number(0.0)\n",
+    "    \"\"\"\n",
+    "    fstring = \"{0:.\" + str(significant_digits+1) + \"g}\"\n",
+    "    return fstring.format(x)\n",
     "\n",
-    "format_number(3.123123), format_number(0), format_number(0.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install deepdiff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from deepdiff import DeepDiff\n",
+    "pocket_platform = next(p for p in deck.platforms if p[\"name\"] == pocket.name)\n",
+    "del pocket_platform[\"color\"]\n",
+    "del pocket_platform[\"description\"]\n",
+    "del pocket_platform[\"rotation\"]\n",
     "\n",
-    "DeepDiff(\n",
-    "  t1 = next(p for p in deck.platforms if p[\"name\"] == pocket.name),\n",
-    "  t2 = data_converted[\"piper_platform\"],\n",
-    "  # math_epsilon=0.001\n",
-    "  number_to_string_func = format_number, significant_digits=4,\n",
-    "  ignore_numeric_type_changes=True\n",
-    ")"
+    "# Compare\n",
+    "diff_result = DeepDiff(\n",
+    "    t1 = pocket_platform,\n",
+    "    t2 = converted_platform,\n",
+    "    # math_epsilon=0.001\n",
+    "    number_to_string_func = format_number, significant_digits=4,\n",
+    "    ignore_numeric_type_changes=True\n",
+    ")\n",
+    "print(diff_result if diff_result else \"No differences!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{\n",
-    "  \"color\": \"#89e04c\",\n",
-    "  \"description\": \"Pocket-size thermocycler (https://gaudi.ch/PocketPCR/).\",\n",
-    "  \"rotation\": 0,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Tip racks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
