pipettin: test container translation too

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1724,13 +1724,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example using exported data.\n",
     "from pylabrobot.resources import SilverDeck\n",
     "from deepdiff import DeepDiff\n",
+    "from pprint import pprint\n",
+    "from copy import deepcopy\n",
+    "from newt.translators.plr import deck_to_workspaces, convert_custom\n",
     "\n",
     "# Choose the database and a workspace.\n",
     "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
@@ -1743,31 +1746,7 @@
     "pocket = deck.get_resource(item_name)\n",
     "pocket_serialized = pocket.serialize()\n",
     "\n",
-    "data_converted = convert_custom(pocket_serialized, deck.get_size_y())\n",
-    "converted_platform = data_converted[\"piper_platform\"]\n",
-    "\n",
-    "def format_number(x, significant_digits=4, number_format_notation=None):\n",
-    "    \"\"\"function for DeepDiff's number_to_string_func argument.\n",
-    "    Example:\n",
-    "    format_number(3.123123), format_number(0), format_number(0.0)\n",
-    "    \"\"\"\n",
-    "    fstring = \"{0:.\" + str(significant_digits+1) + \"g}\"\n",
-    "    return fstring.format(x)\n",
-    "\n",
-    "pocket_platform = next(p for p in deck.platforms if p[\"name\"] == pocket.name)\n",
-    "del pocket_platform[\"color\"]\n",
-    "del pocket_platform[\"description\"]\n",
-    "del pocket_platform[\"rotation\"]\n",
-    "\n",
-    "# Compare\n",
-    "diff_result = DeepDiff(\n",
-    "    t1 = pocket_platform,\n",
-    "    t2 = converted_platform,\n",
-    "    # math_epsilon=0.001\n",
-    "    number_to_string_func = format_number, significant_digits=4,\n",
-    "    ignore_numeric_type_changes=True\n",
-    ")\n",
-    "print(diff_result if diff_result else \"No differences!\")"
+    "data_converted = convert_custom(pocket_serialized, deck.get_size_y())"
    ]
   },
   {
