pipettin: add test_translation_plr_plate test, some cleanup too

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,41 +1651,43 @@
     "\n",
     "# Create an instance\n",
     "well_plate = pipettin_test_plate(name='plate_01')\n",
-    "well_plate.set_well_liquids(liquids=(None, 123))"
+    "well_plate.set_well_liquids(liquids=(None, 123))\n",
+    "\n",
+    "well_plate.print_grid()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pylabrobot.resources import Deck, Coordinate\n",
     "\n",
-    "# deck = Deck(size_x=300, size_y=200)\n",
+    "deck = Deck(size_x=300, size_y=200)\n",
     "\n",
     "deck.assign_child_resource(well_plate, location=Coordinate(100,100,0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from newt.translators.plr import deck_to_workspaces\n",
+    "from newt.translators.plr import deck_to_workspaces, deck_to_db\n",
     "\n",
     "# Serialize deck.\n",
     "deck_data = deck.serialize()\n",
     "# Convert to workspace.\n",
-    "new_workspaces = deck_to_workspaces(deck_data)\n",
+    "result = deck_to_db(deck_data)\n",
     "\n",
     "import json\n",
     "data = json.dumps(deck_data, indent = 4)\n",
     "with open(\"deck.json\", 'w', encoding='utf-8') as f:\n",
     "    f.write(data)\n",
-    "data = json.dumps(new_workspaces, indent = 4)\n",
-    "with open(\"workspace.json\", 'w', encoding='utf-8') as f:\n",
+    "data = json.dumps(result, indent = 4)\n",
+    "with open(\"db.json\", 'w', encoding='utf-8') as f:\n",
     "    f.write(data)\n"
    ]
   },
