notebooks: working examples of using PLr objects and OT objects with the SilverDeck and exporting to pipettin

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1641,6 +1641,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get a PLR test \"Plate\" object, not derived from Pipettin, to test conversion."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1657,6 +1664,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add the plate to a deck:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -1670,25 +1684,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from newt.translators.plr import deck_to_workspaces, deck_to_db\n",
+    "from pylabrobot.resources.pipettin.utils import json_dump\n",
     "\n",
     "# Serialize deck.\n",
     "deck_data = deck.serialize()\n",
     "# Convert to workspace.\n",
     "result = deck_to_db(deck_data)\n",
     "\n",
-    "import json\n",
-    "data = json.dumps(deck_data, indent = 4)\n",
-    "with open(\"deck.json\", 'w', encoding='utf-8') as f:\n",
-    "    f.write(data)\n",
-    "data = json.dumps(result, indent = 4)\n",
-    "with open(\"db.json\", 'w', encoding='utf-8') as f:\n",
-    "    f.write(data)\n"
+    "json_dump(deck_data, \"deck.json\")\n",
+    "json_dump(result, \"db.json\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OpenTrons objects\n",
+    "\n",
+    "Lets start with a plate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.resources import Coordinate\n",
+    "from pylabrobot.resources.opentrons import opentrons_96_tiprack_300ul\n",
+    "\n",
+    "# Instantiate the plate.\n",
+    "ot_well_plate = opentrons_96_tiprack_300ul(\"plate_02\")\n",
+    "\n",
+    "# A coordinate can be set for floating resources.\n",
+    "# ot_well_plate.location = Coordinate(10,10,10)\n",
+    "\n",
+    "from newt.translators.plr import convert_item\n",
+    "\n",
+    "# Convert the plate.\n",
+    "piper_item, piper_platform, item_containers = convert_item(ot_well_plate.serialize(), 300)\n",
+    "\n",
+    "piper_platform"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets use an OT resource with the SilverDeck:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.resources.pipettin import make_silver\n",
+    "\n",
+    "# Handy generator function.\n",
+    "deck = make_silver(empty=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the resource class\n",
+    "from pylabrobot.resources import pipettin_test_plate, Coordinate\n",
+    "from pylabrobot.resources.opentrons import opentrons_96_tiprack_300ul\n",
+    "\n",
+    "# New instance of a test \"Plate\".\n",
+    "well_plate = pipettin_test_plate(name='plate_01')\n",
+    "well_plate.set_well_liquids(liquids=(None, 123))\n",
+    "well_plate.print_grid()\n",
+    "\n",
+    "# OpenTrons well-plate.\n",
+    "ot_well_plate = opentrons_96_tiprack_300ul(\"plate_02\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assign the resources.\n",
+    "deck.assign_child_resource(well_plate, location = Coordinate(100, 100))\n",
+    "deck.assign_child_resource(ot_well_plate, location = Coordinate(100, 250))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert and draw:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from newt.translators.plr import deck_to_db\n",
+    "from newt.utils import draw_ascii_workspace\n",
+    "from pprint import pprint\n",
+    "\n",
+    "d = deck.serialize()\n",
+    "\n",
+    "db = deck_to_db(d)\n",
+    "w = db[\"workspaces\"][0]\n",
+    "p = db[\"platforms\"]\n",
+    "\n",
+    "print(draw_ascii_workspace(w, p))"
    ]
   },
   {
@@ -1721,7 +1845,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try importing and exporting the Pocket PCR custom platform."
+    "Try importing and exporting the Pocket PCR custom platform.\n",
+    "\n",
+    "Because PLR objects don't really want to preserve information about their \"regular\" platforms (i.e grid-like platforms like well-plates and tip-racks), the \"custom\" platform type seems useful.\n",
+    "\n",
+    "Any \"platform-like\" resource that is not contemplated, may be translated to a custom platform."
    ]
   },
   {
@@ -1732,7 +1860,6 @@
    "source": [
     "# Example using exported data.\n",
     "from pylabrobot.resources import SilverDeck\n",
-    "from deepdiff import DeepDiff\n",
     "from pprint import pprint\n",
     "from copy import deepcopy\n",
     "from newt.translators.plr import deck_to_workspaces, convert_custom\n",
@@ -1749,6 +1876,25 @@
     "pocket_serialized = pocket.serialize()\n",
     "\n",
     "data_converted = convert_custom(pocket_serialized, deck.get_size_y())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using the OpenTrons Deck"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.resources.opentrons import OTDeck\n",
+    "\n",
+    "# Instantiate the deck object.\n",
+    "# deck = OTDeck()"
    ]
   },
   {
